--- a/Views/Home.ejs
+++ b/Views/Home.ejs
@@ -117,7 +117,7 @@ body {
 }
 
 #hero button {
-    background-image: url();
+    background-image: url("Images/woman-1245817.jpg");
     background-color: transparent;
     color: #088178;
     border: 0;
@@ -257,7 +257,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url("banners/banner2.jpg");
+    background-image: url("Images/banner2.jpg");
     background-size: 100%;
     width: 100%;
     height: 40vh;
@@ -527,7 +527,7 @@ body {
     <section id="banner" class="section-m1">
         <h4>Repair Services</h4>
         <h2>Up to <span>>70% off</span> - All t-shirts & Accessories</h2>
-        <a href="products.html"><button class="normal">Explore More</button></a>
+        <a href="Product"><button class="normal">Explore More</button></a>
     </section>
     <section id="product1" class="section-p1">
         <h2>New collection</h2>
