--- a/Views/AddminM.ejs
+++ b/Views/AddminM.ejs
@@ -54,6 +54,7 @@
 </head>
 
 <body>
+    <%- include("./partials/Nav.ejs") %>
     <header>
         <h1>E-commerce Admin Dashboard</h1>
     </header>
