--- a/Views/Admin_Products_List.ejs
+++ b/Views/Admin_Products_List.ejs
@@ -61,6 +61,7 @@
 </head>
 
 <body>
+    <%- include("./partials/Nav.ejs") %>
     <div class="container">
         <h1>Product List</h1>
         <table id="product-table">
