--- a/Views/Edit_Users.ejs
+++ b/Views/Edit_Users.ejs
@@ -45,6 +45,7 @@
 </head>
 
 <body>
+    <%- include("./partials/Nav.ejs") %>
     <div class="user-edit-sheet">
         <h2>Edit User</h2>
         <form class="ab">
