--- a/Views/Add_Product.ejs
+++ b/Views/Add_Product.ejs
@@ -31,6 +31,7 @@
 	</style>
 </head>
 <body>
+	<%- include("./partials/Nav.ejs") %>
 	<div class="container">
 		<h1>Add Product</h1>
 		<form id="edit-product-form" method="post" action="">
