--- a/Views/Addmin_Users.ejs
+++ b/Views/Addmin_Users.ejs
@@ -51,6 +51,7 @@
 </head>
 
 <body>
+    <%- include("./partials/Nav.ejs") %>
     <div class="container">
         <h1>Customer List</h1>
         <table id="customer-table">
