--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -69,7 +69,12 @@
 #heart {
     font-size: 25px;
 }
+li.name{
+    color: #fffcfc;
+    font-style: italic;
+}
     </style>
+    
 </head>
 <body>
     <section id="header">
@@ -79,12 +84,21 @@
             <ul id="navbar">
                 <li><a class="home" href="Home">Home</a></li>
                 <li><a href="Product">Shop</a></li>
+                <% if(userName ==="Ragy") { %>
+                    <li><a href="AddminM">Admin</a></li>
+                <% } %>
                 <li><a href="test.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="Contact">Contact</a></li>
                 <li><a href="WishList"><i id="heart" class="far fa-heart"></i></a></li>
                 <li><a href="Cart"><i class="material-icons">shop</i></a></li>
-                <li><a href="Login2">LogIn</a></li>
+                <% if(userName ==="" ) { %>
+                   <li> <a href='/Login2'>Login</a></li>
+                    <% } else { %>
+                     <li> <a href='/logout'>Logout</a></li>
+                     <li class="name"> Welcome <%= userName %></li>
+                      <% } %>
+                </div>>
             </ul>
         </div>
     </section>
