--- a/Views/AddminM.ejs
+++ b/Views/AddminM.ejs
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+
     <title>E-commerce Admin Dashboard</title>
     <style>
         /* Styles for the header, nav, main, and footer sections... */
@@ -50,6 +51,11 @@
             align-items: center;
         }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/42a3832eaa.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
