--- a/Views/Login2.ejs
+++ b/Views/Login2.ejs
@@ -245,6 +245,7 @@
           <input type="email" placeholder="Email" name="em" autocomplete="off" /><br />
           <input type="hidden" name="tp" value="client">
           <input type="password" placeholder="Password" name="pw" autocomplete="off" /><br />
+          <input type="number" name="ph" placeholder="Phone number" autocomplete="off" /><br/>
           <input type="password" placeholder="Password"  autocomplete="off" /><br />
           <input class="submit-btn" type="submit" value="Sign Up" />
         </form>
