--- a/Views/Admin_Products_List.ejs
+++ b/Views/Admin_Products_List.ejs
@@ -4,6 +4,8 @@
 <head>
     <title>Customer List</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <style>
         body {
             background-color: black;
