--- a/Views/Item.ejs
+++ b/Views/Item.ejs
@@ -188,19 +188,19 @@
     <section class="container sproduct">
         <div class="row mt-5">
             <div class="col-lg-5 col-md-12 col-12 pb-1">
-                <img class="r img-fluid w-100" src="products/pp5.webp">
+                <img class="r img-fluid w-100" src="/Images/pp5.webp">
                 <div class="small-img-group">
                     <div class="small-img-col">
-                        <img class="small-img" src="products/pp2.webp" width="100%">
+                        <img class="small-img" src="/Images/pp2.webp" width="100%">
                     </div>
                     <div class="small-img-col">
-                        <img class="small-img" src="products/pp1.webp" width="100%">
+                        <img class="small-img" src="/Images/pp1.webp" width="100%">
                     </div>
                     <div class="small-img-col">
-                        <img class="small-img" src="products/pp4.webp" width="100%">
+                        <img class="small-img" src="/Images/pp4.webp" width="100%">
                     </div>
                     <div class="small-img-col">
-                        <img class="small-img" src="products/pp3.webp" width="100%">
+                        <img class="small-img" src="/Images/pp3.webp" width="100%">
                     </div>
                 </div>
             </div>
