--- a/Views/WishList.ejs
+++ b/Views/WishList.ejs
@@ -186,8 +186,8 @@
        
 
 
-        <% if (employees.length> 0) { %>
-            <% employees.forEach(emp=> { %>
+        <% if (custemors.length> 0) { %>
+            <% custemors.forEach(emp=> { %>
                 <div class="wish">
                     <div class="products">
                         <div class="product">
