error in whishlist

--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -82,7 +82,7 @@ li.name{
 
         <div>
             <ul id="navbar">
-                <li><a class="home" href="Home">Home</a></li>
+                <li><a class="home" href="/">Home</a></li>
                 <li><a href="Product">Shop</a></li>
                <% if(user.Type==="client"){ %>
                <li> <a href='/AddminM'>Admin</a></li>
