--- a/Views/Addmin_Users.ejs
+++ b/Views/Addmin_Users.ejs
@@ -85,6 +85,9 @@
                   <form action="/delete" method="POST">
                       <button type="submit" name="id" value="<%= emp._id %>">Delete</button>
                   </form>
+                  <form action="/Edit_Users" method="get">
+                    <button type="submit" name="id" value="<%= emp._id %>">Edite</button>
+                </form>
               </td>
               </tr>     
               <% }) %>
