--- a/Views/404.ejs
+++ b/Views/404.ejs
@@ -1,7 +1,8 @@
 <html lang="en">
     
 <body>
-  so sorry,this page is not found :)
-
+<div>
+   <h1>so sorry,this page is not found :)</h1> 
+</div>
 </body>
 </html>
