--- a/Views/404.ejs
+++ b/Views/404.ejs
@@ -1,6 +1,7 @@
 <html lang="en">
     
 <body>
+<%- include("./partials/Nav.ejs") %>
 <div>
    <h1>so sorry,this page is not found :)</h1> 
 </div>
