--- a/Views/ProductsPage.ejs
+++ b/Views/ProductsPage.ejs
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-    <script  src="https://kit.fontawesome.com/42a3832eaa.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/42a3832eaa.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="CSS/footer.css">
@@ -166,6 +166,30 @@
         #num a {
             text-decoration: none;
         }
+
+        .pagination {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /* Add this line */
+        }
+
+        .pagination a {
+            margin: 0 5px;
+            padding: 5px 10px;
+            border: 1px solid #000;
+            border-radius: 5px;
+            color: #eb9e10;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+        .pagination a.active,
+        .pagination a:hover {
+            background-color: #000;
+            color: #fff;
+        }
     </style>
 
     <title>Products</title>
@@ -177,14 +201,18 @@
             <h2>New Arrivals</h2>
             <p>The Store you always wanted!!</p>
             <div class="pro-container">
-            <% if (products.length> 0) { %>
-                <% products.forEach(pro=> { %>
+                <% if (products.length> 0) { %>
+                    <% products.forEach(pro=> { %>
                         <div onclick="" class="pro">
                             <a href="Item">
                                 <img class="p1" src="/Images/pp3.webp" alt="">
                                 <div class="des">
-                                    <span><%= pro.id %></span>
-                                    <h5><%= pro.decription %></h5>
+                                    <span>
+                                        <%= pro.id %>
+                                    </span>
+                                    <h5>
+                                        <%= pro.decription %>
+                                    </h5>
                                     <div class="star">
                                         <i class="material-icons">star</i>
                                         <i class="material-icons">star</i>
@@ -198,14 +226,19 @@
                             </a>
                         </div>
                         <% }) %>
+                          
                             <% } else { %>
                                 <p>There are no employees to display...</p>
                                 <% } %>
 
-                        
-        
-        
-              </div>
+            </div><br><br><br><br>
+            <center><div class="pagination">
+                <% for (var i=1; i <=totalPages; i++) { %>
+                    <a href="/product?page=<%= i %>" class="<%= currentPage === i ? 'active' : '' %>">
+                        <%= i %>
+                    </a>
+                    <% } %>
+            </div></center> 
         </section>
         <section id="f">
             <footer class="site-footer">
