--- a/Views/404.ejs
+++ b/Views/404.ejs
@@ -1,9 +1,19 @@
 <html lang="en">
-    
+<head>
+<style>
+body{
+background-color:dimgrey;
+}
+ h1{
+ color:#c58308;
+ }
+ </style>
+ </head>
 <body>
 <%- include("./partials/Nav.ejs") %>
 <div>
-   <h1>so sorry,this page is not found :)</h1> 
+<br><br><br><br>
+   <center><h1>so sorry,this page is not found :)</h1> </center> 
 </div>
 </body>
 </html>
