--- a/Views/ProductsPage.ejs
+++ b/Views/ProductsPage.ejs
@@ -180,7 +180,7 @@
             <% if (products.length> 0) { %>
                 <% products.forEach(pro=> { %>
                         <div onclick="" class="pro">
-                                <img class="p1" src="/Images/<%= pro.ProductName %>.png" alt="">
+                                <img class="p1" src="/Images/<%= pro.ProductName %>.jpg" alt="">
                                 <div class="des">
                                     <span><%= pro.ProductName %></span>
                                     <h5><%= pro.Description %></h5>
