--- a/Views/Admin_Products_List.ejs
+++ b/Views/Admin_Products_List.ejs
@@ -74,6 +74,7 @@
                     <th>Price</th>
                     <th>Quantity</th>
                     <th>Delete</th>
+		    <th>edit</th>
                 </tr>
             </thead>
             <tbody>
@@ -82,7 +83,8 @@
                     <td>cotton Tshirt</td>
                     <td>300 EGP</td>
                     <td>50</td>
-                    <td><a href="#"><button>Delet</button></a></td>
+                    <td><a href="Admin_Products_List"><button>Delete</button></a></td>
+		    <td><a href="editproducts"><button>edit</button></a></td>
                     
                 </tr>
                 <tr class="r">
@@ -90,13 +92,14 @@
                     <td>cotton Tshirt</td>
                     <td>300 EGP</td>
                     <td>50</td>
-                    <td><a href="#"><button>Delet</button></a></td>
+                    <td><a href="#"><button>Delete</button></a></td>
+		    <td><a href="editproducts"><button>edit</button></a></td>
                     
                 </tr>
                 <!-- product data will be inserted here dynamically -->
             </tbody>
-            <center><a href="Add_Product"><button class="btn">Add</button></a></center>
-            <center><a href="#"><button class="btn">Delet All</button></a></center>
+            <center><a href="Add_Product"><button class="btn">Add new product</button></a></center>
+            <center><a href="AddminM"><button class="btn">Delete All</button></a></center>
         </table>
     </div>
     <script src="script.js"></script>
