--- a/Views/editproducts.ejs
+++ b/Views/editproducts.ejs
@@ -1,1 +1,41 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Edit Product</title>
+</head>
+<body>
+  <h1>Edit Product</h1>
+  
+  <% if (user && user.Type === 'admin') { %>
+    <% if (product) { %>
+      <form action="/edit/<%= product._id %>" method="POST" enctype="multipart/form-data">
+        <div>
+          <label for="product-Name">Product Name:</label>
+          <input type="text" id="product-Name" name="product-Name" value="<%= product.Product-Name %>">
+        </div>
+        <div>
+            <label for="product-Description">Product Description:</label>
+            <textarea id="product-Description" name="product-Description"><%= product.Description %></textarea>
+          </div>
+        <div>
+          <label for="product-Price">Product Price:</label>
+          <input type="number" id="product-Price" name="product-Price" value="<%= product.Price %>">
+        </div>
+        <div>
+            <label for="product-Image">Product Image:</label>
+            <input type="file" id="product-Image" name="product-Image">
+          </div>
+        <div>
+          <label for="product-Quantity">Product Quantity:</label>
+          <input type="number" id="product-Quantity" name="product-Quantity" value="<%= product.Quantity %>">
+        </div>  
+        <button type="submit">Update Product</button>
+      </form>
+    <% } else { %>
+      <p>Product not found</p>
+    <% } %>
+  <% } else { %>
+    <p>You are not authorized to edit products</p>
+  <% } %>
+</body>
+</html>
